--- a/my-first-game/index.html
+++ b/my-first-game/index.html
@@ -96,7 +96,7 @@ I want players to feel the same sense of fun and relief from playing this game f
 The point of this game is to destroy as many portals as you can by shooting basketballs. To shoot a basketball to the left, press the z key. To shoot a basketball to the right, press the x key.
 The player can move using the w-a-s-d keys (w move up, a move rightt, s move down, d move up). Another way to move is by using the mouse to click on a certain spot to immediately move there.
 The player will have two basketballs to shoot for each portal. If a third basketball is shot, the game is automatically over, so make sure to hit the portal with your first two shots!
-If you manage to destroy a portal, you will earn a point, and another portal will appear. This will continue on until you miss two shots in a row.
+If you manage to destroy a portal, you will earn a point, and another portal will appear. This will continue on until you miss two shots in a row. Game music can be turned off by pressing P, and turned back on by pressing O.
 </li>
 
 <li><strong>Strategies:</strong>
