--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body
 
 <ol>
 <li><a href="my-first-game">Digital Assignment 1</a></li>
+<li><a href="digital-assignment-2">Digital Assignment 2</a></li>
 </ol>
 
 
