Completed Digital Assignment 3

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body
 <ol>
 <li><a href="my-first-game">Digital Assignment 1</a></li>
 <li><a href="digital-assignment-2">Digital Assignment 2</a></li>
+<li><a href="digital-assignment-3">Digital Assignment 3</a></li>
 </ol>
 
 
