Completed digital assignment 4 (iteration of assignment 1)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="my-first-game">Digital Assignment 1</a></li>
 <li><a href="digital-assignment-2">Digital Assignment 2</a></li>
 <li><a href="digital-assignment-3">Digital Assignment 3</a></li>
+<li><a href="digital-assignment-4">Digital Assignment 4 - (Digital Assignment 1 Iteration)</a></li>
 </ol>
 
 
