Completed Digital Assignment 6

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body
 <li><a href="digital-assignment-3">Digital Assignment 3</a></li>
 <li><a href="digital-assignment-4">Digital Assignment 4 - (Digital Assignment 1 Iteration)</a></li>
 <li><a href="digital-assignment-5">Digital Assignment 5 - (Digital Assignment 2 Iteration)</a></li>
+<li><a href="digital-assignment-6">Digital Assignment 6</a></li>
 </ol>
 
 
