--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="digital-assignment-4">Digital Assignment 4 - (Digital Assignment 1 Iteration)</a></li>
 <li><a href="digital-assignment-5">Digital Assignment 5 - (Digital Assignment 2 Iteration)</a></li>
 <li><a href="digital-assignment-6">Digital Assignment 6</a></li>
+<li><a href="digital-assignment-7">Digital Assignment 7 - (Digital Assignment 6 Iteration)</a></li>
 </ol>
 
 
