--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ body
 <li><a href="digital-assignment-5">Digital Assignment 5 - (Digital Assignment 2 Iteration)</a></li>
 <li><a href="digital-assignment-6">Digital Assignment 6</a></li>
 <li><a href="digital-assignment-7">Digital Assignment 7 - (Digital Assignment 6 Iteration)</a></li>
+<li><a href="digital-assignment-8">Digital Assignment 8</a></li>
 </ol>
 
 
