--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body
 <li><a href="digital-assignment-6">Digital Assignment 6</a></li>
 <li><a href="digital-assignment-7">Digital Assignment 7 - (Digital Assignment 6 Iteration)</a></li>
 <li><a href="digital-assignment-8">Digital Assignment 8</a></li>
+<li>Digital Assignment 9 - Skip</li>
 </ol>
 
 
